// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logo renders a logo component with a custom logo 1`] = `
<img
  alt="Logo of undefined"
  className="ui image"
  src="/@@site-logo/logo.cab945d8.svg"
/>
`;

exports[`Logo renders a logo component with a custom logo in a non-root url 1`] = `
<a
  aria-label="Home"
  className={null}
  href="/"
  onClick={[Function]}
  target={null}
  title={null}
>
  <img
    alt="Logo of undefined"
    className="ui image"
    src="/@@site-logo/logo.cab945d8.svg"
  />
</a>
`;

exports[`Logo renders a logo component with default config 1`] = `
<img
  alt="Logo of undefined"
  className="ui image"
  src="Logo.svg"
/>
`;

exports[`Logo renders a logo component with default config in a non-root url 1`] = `
<a
  aria-label="Home"
  className={null}
  href="/"
  onClick={[Function]}
  target={null}
  title={null}
>
  <img
    alt="Logo of undefined"
    className="ui image"
    src="/@@site-logo/logo.cab945d8.svg"
  />
</a>
`;
